tests/errors/other/test_tc_other_05_for_range_type.pc
#import std.io;
int main() {
    for i in 0.."hello" {
        io.println_int(i);
    }
    return 0;
}
